--- a/practice-backend/package.json
+++ b/practice-backend/package.json
@@ -1,24 +1,31 @@
 {
   "name": "practice-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "node --import=tsx --watch  index.ts"
+    "dev": "node --import=tsx --env-file=.env --watch  index.ts",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "prisma": "^6.4.1"
   }
 }
