--- a/practice-frontend/.env
+++ b/practice-frontend/.env
@@ -1,3 +1,4 @@
 VITE_GOOGLE_CLIENT_ID="853972952377-5semldi7p89hqvaetbskgj5jams9ei3s.apps.googleusercontent.com"
 VITE_GITHUB_CLIENT_ID="Ov23limeWzoYfpK44Jp3"
 VITE_GITHUB_CLIENT_SECRET="d5ed6cbbbbb78e96cce749537dfbd9fec8c43890"
+VITE_BACKEND_URI=http://localhost:3012/api/v1
