--- a/practice-frontend/package.json
+++ b/practice-frontend/package.json
@@ -10,21 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "i": "^0.3.7",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "next-themes": "^0.4.4",
     "npm": "^11.1.0",
     "react": "^19.0.0",
-    "react-cookie": "^7.2.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
-    "react-github-login": "^1.0.3",
+    "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -41,7 +51,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
