--- a/practice-backend/package.json
+++ b/practice-backend/package.json
@@ -15,17 +15,22 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "prisma": "^6.4.1"
   }
 }
