--- a/practice-backend/package.json
+++ b/practice-backend/package.json
@@ -19,11 +19,16 @@
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.89.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod": "^3.24.2",
+    "zod-prisma": "^0.5.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
