--- a/practice-backend/package.json
+++ b/practice-backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
     "form-data": "^4.0.2",
     "http-errors": "^2.0.0",
