--- a/practice-frontend/package.json
+++ b/practice-frontend/package.json
@@ -31,6 +31,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
